gateway/04.INGRESS-example/backend-http-grafana-ingress-sample.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: tmax-cloud
  rules:
    - host: grafana.tmaxcloud.org
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /
            pathType: Prefix
