gateway/04.INGRESS-example/backend-http-kinana-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
#    traefik.ingress.kubernetes.io/router.pathmatcher: "/"
#    traefik.ingress.kubernetes.io/router.tls: "true"
#    traefik.ingress.kubernetes.io/service.serversscheme: https
#    traefik.ingress.kubernetes.io/service.serverstransport: insecure-transport
    # add an annotation indicating the issuer to use.
#    cert-manager.io/cluster-issuer: nameOfClusterIssuer
  name: kibana
  namespace: kube-logging
spec:
  ingressClassName: tmax-cloud
  rules:
    - host: kibana.tmaxcloud.org
      http:
        paths:
          - backend:
              service:
                name: kibana
                port:
                  number: 5601
                  # name: https
            path: /api/kibana
            pathType: Prefix
#  tls:
#    - hosts:
#        - console.hypercloud.com
#      secretName: api-gateway-server-tls
